--- a/productos/src/main/resources/templates/listado/productos.html
+++ b/productos/src/main/resources/templates/listado/productos.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Lista de productos</h1>
 <table>
-    <a th:href="@{/create/}">Crear nuevo producto</a>
+    <a th:href="@{/producto/create/}">Crear nuevo producto</a>
     <tr>
         <th>Nombre del producto</th>
         <th>Precio</th>
