--- a/productos/src/main/resources/templates/crear/nuevaCategoria.html
+++ b/productos/src/main/resources/templates/crear/nuevaCategoria.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<h1>Añadir nuevo producto</h1>
+
+<form action="/categoria/">
+    <label for="categoria">Categoria:</label>
+    <input type="text" id="categoria" name="categoria"><br><br>
+    <input type="submit" value="Añadir categoria">
+</form>
 
 </body>
 </html>
