--- a/productos/src/main/resources/templates/crear/nuevoProducto.html
+++ b/productos/src/main/resources/templates/crear/nuevoProducto.html
@@ -5,16 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Lista de productos</h1>
-<table>
-    <tr>
-        <th>Nombre del producto</th>
-        <th>Precio</th>
-    </tr>
-    <tr th:each="producto : ${listado}">
-        <td th:text="${producto.nombreProducto}"></td>
-        <td th:text="${producto.precio}"></td>
-    </tr>
-</table>
+<h1>Añadir nuevo producto</h1>
+
+<form action="/producto/">
+    <label for="producto">Producto:</label>
+    <input type="text" id="producto" name="producto"><br><br>
+    <label for="precio">Precio:</label>
+    <input type="text" id="precio" name="precio"><br><br>
+    <input type="submit" value="Añadir producto">
+</form>
+
 </body>
 </html>
