--- a/productos/src/main/resources/templates/crear/nuevaCategoria.html
+++ b/productos/src/main/resources/templates/crear/nuevaCategoria.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Añadir nuevo producto</h1>
+<h1>Añadir nueva categoria</h1>
 
 <form action="/categoria/">
     <label for="categoria">Categoria:</label>
