--- a/productos/src/main/resources/templates/listado/categorias.html
+++ b/productos/src/main/resources/templates/listado/categorias.html
@@ -7,6 +7,9 @@
 <body>
 <h1>Lista de Categorias</h1>
 <table>
+    <a th:href="@{/producto/}">Listado productos</a>
+    <br>
+    <br>
     <a th:href="@{/categoria/create/}">Crear nueva categoria</a>
     <tr>
         <th>Categoria</th>
