--- a/productos/src/main/resources/templates/listado/productos.html
+++ b/productos/src/main/resources/templates/listado/productos.html
@@ -7,6 +7,10 @@
 <body>
 <h1>Lista de productos</h1>
 <table>
+
+    <a th:href="@{/categoria/}">Listado categorias</a>
+    <br>
+    <br>
     <a th:href="@{/producto/create/}">Crear nuevo producto</a>
     <tr>
         <th>Nombre del producto</th>
